crop and compression added client side

--- a/crop/index.html
+++ b/crop/index.html
@@ -58,7 +58,8 @@
 <body>
 	
 	<section id="wrapper">
-		<article><h1>Image Crop tool</h1>
+		<article><h1>Image Crop tool</h1><br>
+		<i>Crop image and then Compress</i>
 	<div class="image-editor">
       <input type="file" class="btn btn-success cropit-image-input ">
       <br><br>
