--- a/crop/index.html
+++ b/crop/index.html
@@ -109,6 +109,7 @@
             <div id='buttons-wrapper'>
               <a class='btn btn-large btn-primary' id="jpeg_encode_button">Compress</a>&nbsp;
               <a class='btn btn-large btn-success' id="jpeg_upload_button">Upload</a>
+              <a class='btn btn-large btn-primary'>Download</a>
             </div>
           </div>
         </fieldset>
