--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<script>
+	window.location="scroll/";
+	</script>
 <br>
 <br>
 <br>
@@ -5,3 +8,5 @@
 <br>
 <br>
 <center>LinkedIn Login is <a href="/in_login">Here</a></center>
+<br>
+<br>
