--- a/scroll/index.html
+++ b/scroll/index.html
@@ -2,9 +2,16 @@
 <html ng-app="scrollApp" ng-controller="scrollController" >
 <head>
 	<title>
-		One page scroll in  angular
+		One page scroll using angularjs | No jquery
 		</title>
 <link href='foundation.css' rel='stylesheet' type='text/css'>
+<meta property="og:type" content="animation" />
+<meta property="og:description" content="One page scroll using angularjs only | no jquery" />
+<meta property="og:url" content="http://rdharmateja.github.io/scroll/" />
+<meta property="og:site_name" content="rdharmateja.github.io" />
+<meta property="article:publisher" content="rdteja" />
+
+
 <style>
 	
 .my-slide-container {
@@ -217,8 +224,7 @@ section {
       <section class="page1">
         <div class="page_container">
         <br><br><br><br>
-      <br><br>
-        <center><h3>PAGE 1: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3 | NO JQUERY</h3></center>
+        <center><h3>RDTeja<br><br>PAGE 1: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3 | NO JQUERY</h3></center>
 	</div>
       </section>
 </script>
@@ -229,8 +235,8 @@ section {
   	    <section class="page2">
 	      <div class="page_container">
 	      	 <br><br><br><br>
-      <br><br><br><br>
-	     <center><h3>PAGE 2: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
+      <br><br>
+	     <center><h3>RDTeja<br><br>PAGE 2: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
 </div>
       </section>
 </script>
