--- a/scroll/index.html
+++ b/scroll/index.html
@@ -214,6 +214,9 @@ section {
   <button class="secondary" ng-disabled="disable(2);" ng-click="cssSet(2);myExp='2'">Two</button>
   <button class="secondary" ng-disabled="disable(3);" ng-click="cssSet(3);myExp='3'">Three</button>
   <button class="secondary" ng-disabled="disable(4);" ng-click="cssSet(4);myExp='4'">Four</button>
+  <br>
+  <br>
+  <a href="http://rdharmateja.github.io/scroll" >View on GitHub</a>
   </div></center>
   
 </div>
