--- a/scroll/index.html
+++ b/scroll/index.html
@@ -216,7 +216,7 @@ section {
   <button class="secondary" ng-disabled="disable(4);" ng-click="cssSet(4);myExp='4'">Four</button>
   <br>
   <br>
-  <a href="http://rdharmateja.github.io/scroll" >View on GitHub</a>
+  <a class="button" href="https://github.com/RDharmaTeja/RDharmaTeja.github.io/tree/master/scroll" >View on GitHub</a>
   </div></center>
   
 </div>
@@ -227,7 +227,7 @@ section {
       <section class="page1">
         <div class="page_container">
         <br><br><br><br>
-        <center><h3>RDTeja<br><br>PAGE 1: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3 | NO JQUERY</h3></center>
+        <center><h3>RDTeja<br><br>PAGE 1: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3 | NO JQUERY</h3></center>
 	</div>
       </section>
 </script>
@@ -239,7 +239,7 @@ section {
 	      <div class="page_container">
 	      	 <br><br><br><br>
       <br><br>
-	     <center><h3>RDTeja<br><br>PAGE 2: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
+	     <center><h3>RDTeja<br><br>PAGE 2: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
 </div>
       </section>
 </script>
@@ -250,9 +250,9 @@ section {
 
  	    <section class="page3">
  	    	 <br><br><br><br>
-      <br><br><br><br>
+      <br><br>
 	      <div class="page_container">			  
-<center><h3>PAGE 3: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
+<center><h3>RDTeja<br><br>PAGE 3: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
   	    </div>
       </section>
 </script>
@@ -261,9 +261,9 @@ section {
 
  	    <section class="page2">
  	    	 <br><br><br><br>
-      <br><br><br><br>
+      <br><br>
 	      <div class="page_container">			  
-<center><h3>PAGE 4: CAN MOVE USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
+<center><h3>RDTeja<br><br>PAGE 4: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
   	    </div>
       </section>
 </script>
