updated scroll to have wheel event

--- a/scroll/index.html
+++ b/scroll/index.html
@@ -271,7 +271,7 @@ section {
       <section class="page1">
         <div class="page_container">
         <br><br><br><br>
-        <center><h3>RDTeja<br><br>PAGE 1: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3 | NO JQUERY</h3></center>
+        <center><h3>RDTeja<br><br>PAGE 1: SCROLL USING ARROWS AND MOUSE WHEEL<br>MADE USING ANGULAR AND CSS3 | NO JQUERY</h3></center>
 	</div>
       </section>
 </script>
@@ -283,7 +283,7 @@ section {
 	      <div class="page_container">
 	      	 <br><br><br><br>
       <br><br>
-	     <center><h3>RDTeja<br><br>PAGE 2: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
+	     <center><h3>RDTeja<br><br>PAGE 2: SCROLL USING ARROWS AND MOUSE WHEEL<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
 </div>
       </section>
 </script>
@@ -296,7 +296,7 @@ section {
  	    	 <br><br><br><br>
       <br><br>
 	      <div class="page_container">			  
-<center><h3>RDTeja<br><br>PAGE 3: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
+<center><h3>RDTeja<br><br>PAGE 3: SCROLL USING ARROWS AND MOUSE WHEEL<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
   	    </div>
       </section>
 </script>
@@ -307,7 +307,7 @@ section {
  	    	 <br><br><br><br>
       <br><br>
 	      <div class="page_container">			  
-<center><h3>RDTeja<br><br>PAGE 4: SCROLL USING ARROWS<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
+<center><h3>RDTeja<br><br>PAGE 4: SCROLL USING ARROWS AND MOUSE WHEEL<br>MADE USING ANGULAR AND CSS3| NO JQUERY</h3></center>
   	    </div>
       </section>
 </script>
