--- a/test_progressive.html
+++ b/test_progressive.html
@@ -4,8 +4,9 @@
   <meta charset=="utf-8">
   </head>
   <body>
-    <img src="images/bee.png">
-  	<img src="images/Blue-3D-HD-Wallpapers.png">
+    <img src="images/bee.png"/>
+  	<img src="images/Blue-3D-HD-Wallpapers.png"/>
+    <center><h3>TO FEEL THE LOADING OF PROGRESSIVE IMAGES</h3></center>
     <img src="images/electro-full-hd-abstract-blue-black-1031180.png">
     <img src="images/3-d-222v.png">
 
