--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<script>
-	window.location="scroll/";
-	</script>
-<br>
-<br>
-<br>
-<center>Facebook Login is <a href="/fb_login">Here</a></center>
-<br>
-<br>
-<center>LinkedIn Login is <a href="/in_login">Here</a></center>
-<br>
-<br>
+<html>
+<head>
+<title>R D Teja - JS PS Solution</title>
+<style>
+#mycanvas {
+	display: block;
+	border: 5px solid green;
+	margin: 50px auto;
+}
+</style>
+</head>
+<body>
+<canvas onclick="addBall()" id="mycanvas"></canvas>
+<div id="data" style="position:absolute;top:10%;left:5%;">
+<h3>Click on box area</h3>
+  <b>Balls : </b>
+  <span id="noBalls"><b>0</b>
+  </span> <span> (Max=20) </span>
+</div>
+<script src="required.js"></script>
+</body>
+</html>
