--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Teja </h1>
+        <h1>Dharma Teja</h1>
         <h2>a Coder In Aero</h2>
 
         <section id="downloads">
