--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
       <div class="container">
         <h1>Teja </h1>
         <h2>a Coder In Aero</h2>
-<!--
-        <section id="downloads">
-          <a href="https://github.com/RDharmaTeja" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+<!--        <section id="downloads">
+          <a href="https://github.com/RDharmaTeja" class="btn btn-github"><span class="icon"></span></a>        </section>
     -->
       </div>
     </header>
@@ -30,7 +28,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to My Page.</h3>
 
-<p>Hi there!!</p>
+<p><a href = "walls_windows/">Walls with windows</a></p><br>
 
 
 
