--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Teja </h1>
-        <h2>a Coder In Aero</h2>
+        <h2>a Coder</h2>
 <!--        <section id="downloads">
           <a href="https://github.com/RDharmaTeja" class="btn btn-github"><span class="icon"></span></a>        </section>
     -->
@@ -29,6 +29,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to My Page.</h3>
 
 <p><a href = "walls_windows/">Walls with windows</a></p><br>
+<p><a href = "bouncing_ball.html">Bouncing balls</a></p><br>
 
 
 
