--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to My Page.</h3>
 
 <p><a href = "walls_windows/">Walls with windows</a></p><br>
-<p><a href = "bouncing_ball.html">Bouncing balls</a></p><br>
+<p><a href = "bouncing_balls.html">Bouncing balls</a></p><br>
 
 
 
