--- a/tsm/template.html
+++ b/tsm/template.html
@@ -98,7 +98,7 @@
     </div>
     
 <div class="small-12 columns">
-<button type="submit" id='get_route_button' class="button">Get Route!</button>
+<a href="#" id='get_route_button' class="button">Get Route!</a>
 </div>
     
 <div class="small-12 columns">
